--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,10 @@
                 <div class="shopping right">
                     <span class="iconfont icon-goumai"></span>
                     购物车
-                    <!-- <div class="shopdiv">购物车中还没有商品，赶紧选购吧！</div> -->
+                </div>
+                <div class="shoppinglist">
+                    <img src="./img/jiazai.gif" alt="" class="jiazai">
+                    <span class="jiazaiwenzi">购物车中还没有商品，赶紧选购吧</span> 
                 </div>
                 <a href="" class="right">消息通知</a>
                 <span class="right">|</span>
@@ -363,10 +366,9 @@
                     <a href="">社区
                     </a>
                 </div>
-                <div class="shousuo">
+                <div class="sousuo">
                     <input type="text" id="seekbox" value="电视">
-                    <input type="submit" value="" id="seek">
-                    <div href="" class="fangdajing">
+                    <div class="fangdajing">
                         <span class="iconfont icon-fangdajing"></span>
                     </div>
 
