--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                 <span class="right">|</span>
                 <a href="" class="right">注册</a>
                 <span class="right">|</span>
-                <a href="" class="right">登录</a>
+                <a href="./login.html" class="right">登录</a>
             </div>
         </nav>
         <nav class="head2">
