--- a/src/login.html
+++ b/src/login.html
@@ -32,15 +32,14 @@
                 <a href="./login.html"><span class="active">登录</span></a>
                 <a href="./reg.html"><span >注册</span></a>
             </div>
+            <form action="../interface/login.php" method="get" id="bg">
             <div>
                 <div class="terseInput " state="normal" ok="false" id="username" style="width: 80%; margin-top: 8%;">
                     <div class="terseInput_span terseInput_span_state_down" >
                         用户名
                     </div>
                     <div class="terseInput_inputDiv ">
-                        <input class="terseInput_input">
-                    </div>
-                    <div class="terseInput_icon_err" title="" style="display: none">
+                        <input class="terseInput_input" name="username">
                     </div>
                 </div>
                 
@@ -51,16 +50,15 @@
                         密码
                     </div>
                     <div class="terseInput_inputDiv ">
-                        <input class="terseInput_input">
+                        <input class="terseInput_input" name="password">
                     </div>
                     <div class="terseInput_icon_err" title="" style="display: none">
                     </div>
                 </div>
             </div>
             <div>
-                <input type="button" value="">
-                <button  id="but">登录</button>
-            </div>
+                <input type="submit" value="登录" id="btn"></input>
+            </div></form>
         </div>
         <div class="box3">
             小米公司版权所有-京ICP备10046444-京公网安备11010802020134号-京ICP证110507号
