--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>小米商城</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_3158268_o512dif5i9h.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_3158268_zqe5qvxwndo.css">
 
 </head>
 
@@ -1077,7 +1077,7 @@
                                 <p>4699元起</p>
                             </a>
                             <div class="two">
-                                <a href="">
+                                <a href="" class="small">
                                     <div>
                                         <p>Redmi Buds 3</p>
                                         <p>青春版</p>
