--- a/src/item.html
+++ b/src/item.html
@@ -584,9 +584,9 @@
         <div class="main1">
             <div class="wrapper">
                 <div class="left">
-                    <img src="./img/xiaoai1.jpg" alt="">
+                    <img src="./img/xiaoai1.jpg" alt="" class="qiehuan">
                     <div class="jindutiao">
-                        <span></span>
+                        <span class="active"></span>
                         <span></span>
                         <span></span>
                         <span></span>
