--- a/src/item.html
+++ b/src/item.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="head">
             <div class="wrapper">
-                <a>小米商城</a>
+                <a href="index.html">小米商城</a>
                 <span>|</span>
                 <a>MIUI</a>
                 <span>|</span>
@@ -45,9 +45,9 @@
                 </div>
                 <a href="" class="right">消息通知</a>
                 <span class="right">|</span>
-                <a href="" class="right">注册</a>
+                <a href="./reg.html" class="right">注册</a>
                 <span class="right">|</span>
-                <a href="" class="right">登录</a>
+                <a href="./login.html" class="right">登录</a>
             </div>
         </nav>
         <nav class="head2">
@@ -535,7 +535,8 @@
                         </ul>
                     </div>
                 </div>
-                
+            </div>
+        </div>
 
     </header>
     <main>
@@ -572,7 +573,7 @@
         <div class="title">
             <div class="wrapper">
                 <div class="left">
-                    <span>
+                    <span class="name">
                         小米小爱音箱Play 增强版
                     </span>
                 </div>
@@ -584,12 +585,13 @@
         <div class="main1">
             <div class="wrapper">
                 <div class="left">
-                    <img src="./img/xiaoai1.jpg" alt="" class="qiehuan">
+                    <img class="pricurt1" src="./img/xiaoai1.jpg" alt="">
                     <div class="jindutiao">
-                        <span class="active"></span>
                         <span></span>
                         <span></span>
-
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </div>
                     <div class="leftbuttom"></div>
                     <div class="rightbuttom"></div>
@@ -597,9 +599,9 @@
                 </div>
                 <div class="right">
                     <div class="title">
-                        <h2>小米小爱音箱Play 增强版</h2>
+                        <h2 class="name">小米小爱音箱Play 增强版</h2>
                         <p style=color:#ff4a00>内置红外遥控，一句话控制传统家电
-                            <span style=color:#b0b0b0>
+                            <span style=color:#b0b0b0 class="title12">
                                 内置红外遥控，一句话控制传统家电 | LED时钟显示，自适应亮度调节
                             </span>
                         </p>
@@ -630,21 +632,21 @@
                     <div class="myselect">
                         <div class="top">
                             <span>
-                                小米小爱音箱Play 增强版 黑色(默认)
+                                <span class="name">小米小爱音箱Play 增强版</span>&nbsp;&nbsp; <span class="color">黑色(默认)</span>
                             </span>
-                            <span>
+                            <span class="pice">
                                 149元
                             </span>
                         </div>
                         <div class="bottom">
-                            <span>
+                            <span class="pice1">
                                 总计：149元
                             </span>
                         </div>
                     </div>
                     <div class="buttom">
-                        <div class="buy">
-                            <a href="">加入购物车</a>
+                        <div class="buy" id="additem">
+                            <a href="./shop.html">加入购物车</a>
                         </div>
                         <div class="like">
                             <span class="iconfont icon-xihuan"></span>
@@ -895,6 +897,7 @@
     </div>
 </body>
 <script type="text/javascript" src="./js/jquery.min.js"></script>
+<script type="text/javascript" src="./js/cookie.js"></script>
 <script type="text/javascript" src="./js/item.js"></script>
 
 </html>
