--- a/src/shop.html
+++ b/src/shop.html
@@ -43,6 +43,12 @@
                 </div>
             </div>
         </div>
+        <ul class="list">
+
+        </ul>
+        
+
+
         <div class="box2">
             <div class="wrapper">
                 <div class="top">
@@ -331,5 +337,7 @@
     </div>
     </div>
 </body>
-
+<script src="./js/jquery.min.js"></script>
+<script src="./js/cookie.js"></script>
+<script src="./js/shop.js"></script>
 </html>
